--- a/BAB.OWIN.Example/BAB.OWIN.Example.csproj
+++ b/BAB.OWIN.Example/BAB.OWIN.Example.csproj
@@ -73,6 +73,7 @@
     <Folder Include="Content\" />
     <Folder Include="Models\" />
     <Folder Include="Scripts\" />
+    <Folder Include="Middleware\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\HomeController.cs" />
@@ -81,6 +82,7 @@
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Middleware\DebugMiddleware.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Web.config" />
