--- a/BAB.OWIN.Example/Web.config
+++ b/BAB.OWIN.Example/Web.config
@@ -9,7 +9,8 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
 <configuration>
   <system.web>
     <compilation debug="true" targetFramework="4.7.1">
-      <assemblies />
+      <assemblies>
+      </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.7.1" />
   </system.web>
